# rw5_to_csv

./: .gitignore  README.md  build.ps1  machine_state.py  pyproject.toml  requirements.txt  ruff.toml  setup.py
records/: gps.py  records_parsers.py
rw5_to_csv.egg-info/: SOURCES.txt  top_level.txt
rw5_to_csv/records/: record.py
rw5_to_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: a.out  main.py
src/rw5_to_csv/: __init__.py  machine_state.py  plot.py  prelude.py  rw5_csv.py  total_station.py
src/rw5_to_csv.egg-info/: PKG-INFO  SOURCES.txt
src/rw5_to_csv/records/: bk.py  bp.py  common.py  gps.py  ls.py  oc.py  record.py  records_parsers.py  sp.py  ss.py
src/rw5_to_csv/utils/: command_blocks.py  crdb.py  dms.py  plot.py
src/tests/: convert_test.py  parse_records_test.py  prelude_test.py
src/tests/data/: 24163AT250529.rw5  gps-long-stats_overwritten-shots.test.rw5  gps-multiple-bp.test.rw5  gps-short-stats.test.rw5  ss.test.crdb  ss.test.rw5  test.1.rw5  test.2.rw5  test.3.rw5  test.6.rw5
tests/: convert_test.py  parse_records_test.py  prelude_test.py
tests/data/: test.4.rw5  test.5.rw5
