[build-system]
requires = ["setuptools>=61.0.0,<69.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rw5_to_python"
version = "0.1.0"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
description="Parse RW5 files into CSV files of GPS and SS records."
authors = [
  {name = "Joseph Long", email = "joseph.long@dmse.ca"},
]
readme = "README.md"
license="BSD"
keywords="rw5 totalstation processing"

[project.urls]
Source = "https://github.com/j-osephlong/rw5_to_csv"

[tool.ruff.lint]
ignore = ["S101"]