[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rw5_to_csv"
version = "0.2.0"
requires-python = ">= 3.9.18"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
description="Parse RW5 files into CSV files of GPS and SS records."
authors = [
  {name = "Joseph Long", email = "joseph.long@dmse.ca"},
]
readme = "README.md"
license = {text = "MIT License"}
keywords = ["rw5", "totalstation", "processing"]

[project.urls]
Source = "https://github.com/j-osephlong/rw5_to_csv"

[tool.setuptools]
packages = ["rw5_to_csv"]
package-dir = {"" = "src"}

[tool.ruff.lint]
ignore = ["S101"]