[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rw5_to_csv"
version = "0.6.2"
requires-python = ">= 3.9.18"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
description="Parse RW5 files into CSV files of GPS and SS records."
authors = [
  {name = "Joseph Long", email = "joseph.long@dmse.ca"},
]
readme = "README.md"
license = {text = "MIT License"}
keywords = ["rw5", "totalstation", "processing"]

[project.urls]
Source = "https://github.com/j-osephlong/rw5_to_csv"

[tool.setuptools]
packages = ["rw5_to_csv"]
package-dir = {"" = "src"}

[tool.ruff.lint]
ignore = ["S101"]

[tool.commitizen]
config="pyproject.toml"
tag_format = "v$major.$minor.$patch$prerelease"
version_provider = "pep621"
legacy_tag_formats = [
    "${version}",
    "myproject-$version",
]
ignored_tag_formats = [
    "stable",
    "component-*",
    "env/*",
    "v${major}.${minor}",
]
version_files = [
    "pyproject.toml:version",
]
pre_bump_hooks = [
  "powershell -File ./build.ps1",
  "git add .",
]